--- a/notebooks_unemployment/xgboost_most_important.ipynb
+++ b/notebooks_unemployment/xgboost_most_important.ipynb
@@ -1788,6 +1788,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
