--- a/notebooks_business_closures/load_data.ipynb
+++ b/notebooks_business_closures/load_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['merchants_all'] = df['merchants_all'] - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -86,27 +95,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10001</td>\n",
-       "      <td>2.580574e-09</td>\n",
+       "      <td>-1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10003</td>\n",
-       "      <td>3.990007e-08</td>\n",
+       "      <td>-1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10005</td>\n",
-       "      <td>5.363940e-07</td>\n",
+       "      <td>-0.999999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1001</td>\n",
-       "      <td>1.159189e+00</td>\n",
+       "      <td>0.159189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1003</td>\n",
-       "      <td>1.128051e-07</td>\n",
+       "      <td>-1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -114,14 +123,14 @@
       ],
       "text/plain": [
        "  countyfips  merchants_all\n",
-       "0      10001   2.580574e-09\n",
-       "1      10003   3.990007e-08\n",
-       "2      10005   5.363940e-07\n",
-       "3       1001   1.159189e+00\n",
-       "4       1003   1.128051e-07"
+       "0      10001      -1.000000\n",
+       "1      10003      -1.000000\n",
+       "2      10005      -0.999999\n",
+       "3       1001       0.159189\n",
+       "4       1003      -1.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,29 +141,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "countyfips       1920\n",
-       "merchants_all    1920\n",
-       "dtype: int64"
+       "1920"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.count()"
+    "df['countyfips'].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +396,7 @@
        "[5 rows x 95 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +485,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10001</td>\n",
-       "      <td>2.580574e-09</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>10001</td>\n",
        "      <td>Delaware</td>\n",
        "      <td>Kent</td>\n",
@@ -502,7 +509,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10003</td>\n",
-       "      <td>3.990007e-08</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>10003</td>\n",
        "      <td>Delaware</td>\n",
        "      <td>New Castle</td>\n",
@@ -526,7 +533,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10005</td>\n",
-       "      <td>5.363940e-07</td>\n",
+       "      <td>-0.999999</td>\n",
        "      <td>10005</td>\n",
        "      <td>Delaware</td>\n",
        "      <td>Sussex</td>\n",
@@ -550,7 +557,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>01001</td>\n",
-       "      <td>1.159189e+00</td>\n",
+       "      <td>0.159189</td>\n",
        "      <td>01001</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Autauga</td>\n",
@@ -574,7 +581,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>01003</td>\n",
-       "      <td>1.128051e-07</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>01003</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Baldwin</td>\n",
@@ -602,11 +609,11 @@
       ],
       "text/plain": [
        "  countyfips  merchants_all   FIPS     State      County  Deaths  \\\n",
-       "0      10001   2.580574e-09  10001  Delaware        Kent  2425.0   \n",
-       "1      10003   3.990007e-08  10003  Delaware  New Castle  6824.0   \n",
-       "2      10005   5.363940e-07  10005  Delaware      Sussex  3425.0   \n",
-       "3      01001   1.159189e+00  01001   Alabama     Autauga   791.0   \n",
-       "4      01003   1.128051e-07  01003   Alabama     Baldwin  2967.0   \n",
+       "0      10001      -1.000000  10001  Delaware        Kent  2425.0   \n",
+       "1      10003      -1.000000  10003  Delaware  New Castle  6824.0   \n",
+       "2      10005      -0.999999  10005  Delaware      Sussex  3425.0   \n",
+       "3      01001       0.159189  01001   Alabama     Autauga   791.0   \n",
+       "4      01003      -1.000000  01003   Alabama     Baldwin  2967.0   \n",
        "\n",
        "   Years of Potential Life Lost Rate  % Fair or Poor Health  \\\n",
        "0                        7952.454872              18.955716   \n",
@@ -667,7 +674,7 @@
        "[5 rows x 97 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +704,7 @@
        "1921"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
