--- a/notebooks_business_closures/xgboost_most_important.ipynb
+++ b/notebooks_business_closures/xgboost_most_important.ipynb
@@ -84,7 +84,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2.580574e-09</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>10001</td>\n",
        "      <td>Delaware</td>\n",
        "      <td>Kent</td>\n",
@@ -108,7 +108,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3.990007e-08</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>10003</td>\n",
        "      <td>Delaware</td>\n",
        "      <td>New Castle</td>\n",
@@ -132,7 +132,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5.363940e-07</td>\n",
+       "      <td>-0.999999</td>\n",
        "      <td>10005</td>\n",
        "      <td>Delaware</td>\n",
        "      <td>Sussex</td>\n",
@@ -156,7 +156,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.159189e+00</td>\n",
+       "      <td>0.159189</td>\n",
        "      <td>1001</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Autauga</td>\n",
@@ -180,7 +180,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.128051e-07</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>1003</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Baldwin</td>\n",
@@ -209,11 +209,11 @@
       ],
       "text/plain": [
        "   merchants_all   FIPS     State      County  Deaths  \\\n",
-       "0   2.580574e-09  10001  Delaware        Kent  2425.0   \n",
-       "1   3.990007e-08  10003  Delaware  New Castle  6824.0   \n",
-       "2   5.363940e-07  10005  Delaware      Sussex  3425.0   \n",
-       "3   1.159189e+00   1001   Alabama     Autauga   791.0   \n",
-       "4   1.128051e-07   1003   Alabama     Baldwin  2967.0   \n",
+       "0      -1.000000  10001  Delaware        Kent  2425.0   \n",
+       "1      -1.000000  10003  Delaware  New Castle  6824.0   \n",
+       "2      -0.999999  10005  Delaware      Sussex  3425.0   \n",
+       "3       0.159189   1001   Alabama     Autauga   791.0   \n",
+       "4      -1.000000   1003   Alabama     Baldwin  2967.0   \n",
        "\n",
        "   Years of Potential Life Lost Rate  % Fair or Poor Health  \\\n",
        "0                        7952.454872              18.955716   \n",
@@ -346,7 +346,7 @@
     {
      "data": {
       "text/plain": [
-       "merchants_all    49.4539\n",
+       "merchants_all    48.4539\n",
        "dtype: float64"
       ]
      },
@@ -440,20 +440,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tTest-rmse:0.91861\n",
+      "[0]\tTest-rmse:1.35995\n",
       "Will train until Test-rmse hasn't improved in 10 rounds.\n",
-      "[1]\tTest-rmse:0.98430\n",
-      "[2]\tTest-rmse:0.98824\n",
-      "[3]\tTest-rmse:1.07526\n",
-      "[4]\tTest-rmse:1.08270\n",
-      "[5]\tTest-rmse:1.12855\n",
-      "[6]\tTest-rmse:1.14878\n",
-      "[7]\tTest-rmse:1.20759\n",
-      "[8]\tTest-rmse:1.99185\n",
-      "[9]\tTest-rmse:1.97992\n",
-      "[10]\tTest-rmse:2.01462\n",
+      "[1]\tTest-rmse:1.24668\n",
+      "[2]\tTest-rmse:1.15191\n",
+      "[3]\tTest-rmse:1.17899\n",
+      "[4]\tTest-rmse:1.15110\n",
+      "[5]\tTest-rmse:1.17263\n",
+      "[6]\tTest-rmse:1.17916\n",
+      "[7]\tTest-rmse:1.22853\n",
+      "[8]\tTest-rmse:2.00243\n",
+      "[9]\tTest-rmse:1.98822\n",
+      "[10]\tTest-rmse:2.02099\n",
+      "[11]\tTest-rmse:2.01492\n",
+      "[12]\tTest-rmse:2.02985\n",
+      "[13]\tTest-rmse:2.04757\n",
+      "[14]\tTest-rmse:2.04065\n",
       "Stopping. Best iteration:\n",
-      "[0]\tTest-rmse:0.91861\n",
+      "[4]\tTest-rmse:1.15110\n",
       "\n"
      ]
     }
@@ -503,10 +507,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1362.887328</td>\n",
-       "      <td>621.372383</td>\n",
-       "      <td>1050.130241</td>\n",
-       "      <td>1464.31219</td>\n",
+       "      <td>1362.860991</td>\n",
+       "      <td>621.373725</td>\n",
+       "      <td>1050.143527</td>\n",
+       "      <td>1464.283219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -514,7 +518,7 @@
       ],
       "text/plain": [
        "   train-rmse-mean  train-rmse-std  test-rmse-mean  test-rmse-std\n",
-       "0      1362.887328      621.372383     1050.130241     1464.31219"
+       "0      1362.860991      621.373725     1050.143527    1464.283219"
       ]
      },
      "execution_count": 12,
@@ -543,7 +547,7 @@
     {
      "data": {
       "text/plain": [
-       "1050.1302408"
+       "1050.1435265999999"
       ]
      },
      "execution_count": 13,
@@ -585,24 +589,24 @@
      "output_type": "stream",
      "text": [
       "CV with max_depth=9, min_child_weight=5\n",
-      "\trmse 953.4554740000001 for 0 rounds\n",
+      "\trmse 953.4652686 for 0 rounds\n",
       "CV with max_depth=9, min_child_weight=6\n",
-      "\trmse 964.5992964000001 for 0 rounds\n",
+      "\trmse 964.6155684000001 for 0 rounds\n",
       "CV with max_depth=9, min_child_weight=7\n",
-      "\trmse 964.5234862000001 for 0 rounds\n",
+      "\trmse 964.5481629999998 for 0 rounds\n",
       "CV with max_depth=10, min_child_weight=5\n",
-      "\trmse 953.4561753999999 for 0 rounds\n",
+      "\trmse 953.4659353999999 for 0 rounds\n",
       "CV with max_depth=10, min_child_weight=6\n",
-      "\trmse 964.6000230000002 for 0 rounds\n",
+      "\trmse 964.6162764000001 for 0 rounds\n",
       "CV with max_depth=10, min_child_weight=7\n",
-      "\trmse 964.5236844000001 for 0 rounds\n",
+      "\trmse 964.5483522000001 for 0 rounds\n",
       "CV with max_depth=11, min_child_weight=5\n",
-      "\trmse 953.4563871999999 for 0 rounds\n",
+      "\trmse 953.4659902 for 0 rounds\n",
       "CV with max_depth=11, min_child_weight=6\n",
-      "\trmse 964.6001228000001 for 0 rounds\n",
+      "\trmse 964.6163983999999 for 0 rounds\n",
       "CV with max_depth=11, min_child_weight=7\n",
-      "\trmse 964.5237578 for 0 rounds\n",
-      "Best params: 9, 5, rmse: 953.4554740000001\n"
+      "\trmse 964.548416 for 0 rounds\n",
+      "Best params: 9, 5, rmse: 953.4652686\n"
      ]
     }
    ],
@@ -669,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -677,38 +681,14 @@
      "output_type": "stream",
      "text": [
       "CV with subsample=1.0, colsample=1.0\n",
-      "\trmse 953.4554740000001 for 0 rounds\n",
+      "\trmse 953.4652626 for 0 rounds\n",
       "CV with subsample=1.0, colsample=0.9\n",
-      "\trmse 953.7691017999999 for 0 rounds\n",
+      "\trmse 953.7807954 for 0 rounds\n",
       "CV with subsample=1.0, colsample=0.8\n",
-      "\trmse 953.3314268 for 0 rounds\n",
+      "\trmse 953.3430421999999 for 0 rounds\n",
       "CV with subsample=1.0, colsample=0.7\n",
-      "\trmse 1005.3701386 for 1 rounds\n",
-      "CV with subsample=0.9, colsample=1.0\n",
-      "\trmse 969.6819444 for 0 rounds\n",
-      "CV with subsample=0.9, colsample=0.9\n",
-      "\trmse 969.0778442000001 for 0 rounds\n",
-      "CV with subsample=0.9, colsample=0.8\n",
-      "\trmse 968.6380790000001 for 0 rounds\n",
-      "CV with subsample=0.9, colsample=0.7\n",
-      "\trmse 985.1335059999999 for 0 rounds\n",
-      "CV with subsample=0.8, colsample=1.0\n",
-      "\trmse 936.9001916 for 0 rounds\n",
-      "CV with subsample=0.8, colsample=0.9\n",
-      "\trmse 936.3899696000001 for 0 rounds\n",
-      "CV with subsample=0.8, colsample=0.8\n",
-      "\trmse 936.1493858000001 for 0 rounds\n",
-      "CV with subsample=0.8, colsample=0.7\n",
-      "\trmse 936.3501062000001 for 0 rounds\n",
-      "CV with subsample=0.7, colsample=1.0\n",
-      "\trmse 977.9758817999998 for 0 rounds\n",
-      "CV with subsample=0.7, colsample=0.9\n",
-      "\trmse 977.5295302000001 for 0 rounds\n",
-      "CV with subsample=0.7, colsample=0.8\n",
-      "\trmse 977.1689126000001 for 0 rounds\n",
-      "CV with subsample=0.7, colsample=0.7\n",
-      "\trmse 977.2438806 for 0 rounds\n",
-      "Best params: 0.8, 0.8, rmse: 936.1493858000001\n"
+      "\trmse 1005.4020844 for 1 rounds\n",
+      "CV with subsample=0.9, colsample=1.0\n"
      ]
     }
    ],
