--- a/notebooks_business_closures/xgboost_most_important.ipynb
+++ b/notebooks_business_closures/xgboost_most_important.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,31 @@
       "\trmse 953.3430421999999 for 0 rounds\n",
       "CV with subsample=1.0, colsample=0.7\n",
       "\trmse 1005.4020844 for 1 rounds\n",
-      "CV with subsample=0.9, colsample=1.0\n"
+      "CV with subsample=0.9, colsample=1.0\n",
+      "\trmse 969.6969098 for 0 rounds\n",
+      "CV with subsample=0.9, colsample=0.9\n",
+      "\trmse 969.0870521999999 for 0 rounds\n",
+      "CV with subsample=0.9, colsample=0.8\n",
+      "\trmse 968.6470315999999 for 0 rounds\n",
+      "CV with subsample=0.9, colsample=0.7\n",
+      "\trmse 985.1456451999999 for 0 rounds\n",
+      "CV with subsample=0.8, colsample=1.0\n",
+      "\trmse 936.9044704 for 0 rounds\n",
+      "CV with subsample=0.8, colsample=0.9\n",
+      "\trmse 936.3888810000001 for 0 rounds\n",
+      "CV with subsample=0.8, colsample=0.8\n",
+      "\trmse 936.1489502000001 for 0 rounds\n",
+      "CV with subsample=0.8, colsample=0.7\n",
+      "\trmse 936.3485900000002 for 0 rounds\n",
+      "CV with subsample=0.7, colsample=1.0\n",
+      "\trmse 977.9962366 for 0 rounds\n",
+      "CV with subsample=0.7, colsample=0.9\n",
+      "\trmse 977.5467199999999 for 0 rounds\n",
+      "CV with subsample=0.7, colsample=0.8\n",
+      "\trmse 977.1867445999999 for 0 rounds\n",
+      "CV with subsample=0.7, colsample=0.7\n",
+      "\trmse 977.2615867999999 for 0 rounds\n",
+      "Best params: 0.8, 0.8, rmse: 936.1489502000001\n"
      ]
     }
    ],
@@ -750,24 +774,24 @@
      "output_type": "stream",
      "text": [
       "CV with eta=0.3\n",
-      "\trmse 936.1493918000002 for 0 rounds\n",
+      "\trmse 936.1489502000001 for 0 rounds\n",
       "\n",
       "CV with eta=0.2\n",
-      "\trmse 905.2825165999999 for 0 rounds\n",
+      "\trmse 905.2753059999999 for 0 rounds\n",
       "\n",
       "CV with eta=0.1\n",
-      "\trmse 878.2439414 for 0 rounds\n",
+      "\trmse 878.2279000000001 for 0 rounds\n",
       "\n",
       "CV with eta=0.05\n",
-      "\trmse 866.7115402000002 for 0 rounds\n",
+      "\trmse 866.691012 for 0 rounds\n",
       "\n",
       "CV with eta=0.01\n",
-      "\trmse 858.8385566000001 for 0 rounds\n",
+      "\trmse 858.8187250000001 for 0 rounds\n",
       "\n",
       "CV with eta=0.005\n",
-      "\trmse 858.1282611999999 for 0 rounds\n",
+      "\trmse 858.1085638000001 for 0 rounds\n",
       "\n",
-      "Best params: 0.005, rmse: 858.1282611999999\n"
+      "Best params: 0.005, rmse: 858.1085638000001\n"
      ]
     }
    ],
@@ -808,20 +832,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tTest-rmse:0.96981\n",
+      "[0]\tTest-rmse:1.67700\n",
       "Will train until Test-rmse hasn't improved in 10 rounds.\n",
-      "[1]\tTest-rmse:1.15038\n",
-      "[2]\tTest-rmse:1.28764\n",
-      "[3]\tTest-rmse:1.45136\n",
-      "[4]\tTest-rmse:1.54357\n",
-      "[5]\tTest-rmse:1.54696\n",
-      "[6]\tTest-rmse:1.58842\n",
-      "[7]\tTest-rmse:3.32220\n",
-      "[8]\tTest-rmse:3.36002\n",
-      "[9]\tTest-rmse:4.52682\n",
-      "[10]\tTest-rmse:4.55710\n",
+      "[1]\tTest-rmse:1.82398\n",
+      "[2]\tTest-rmse:1.92631\n",
+      "[3]\tTest-rmse:2.06259\n",
+      "[4]\tTest-rmse:2.13506\n",
+      "[5]\tTest-rmse:2.13456\n",
+      "[6]\tTest-rmse:2.17272\n",
+      "[7]\tTest-rmse:3.67436\n",
+      "[8]\tTest-rmse:3.71385\n",
+      "[9]\tTest-rmse:4.82904\n",
+      "[10]\tTest-rmse:4.86041\n",
       "Stopping. Best iteration:\n",
-      "[0]\tTest-rmse:0.96981\n",
+      "[0]\tTest-rmse:1.67700\n",
       "\n"
      ]
     }
@@ -845,7 +869,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best RMSE: 0.97 in 1 rounds\n"
+      "Best RMSE: 1.68 in 1 rounds\n"
      ]
     }
    ],
@@ -869,7 +893,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tTest-rmse:0.96981\n"
+      "[0]\tTest-rmse:1.67700\n"
      ]
     }
    ],
@@ -900,7 +924,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9698124210293413"
+       "1.6769978088240194"
       ]
      },
      "execution_count": 26,
@@ -970,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1288,7 @@
        "% Fair or Poor Health                                 1.000000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1322,6 +1346,13 @@
     "a = pps.matrix(X_x).pivot(columns='x', index='y', values='ppscore')\n",
     "sns.heatmap(a, vmin=0, vmax=1, cmap=\"Blues\", linewidths=0.5, annot=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove % Physically Inactive due to correlation"
    ]
   }
  ],
