--- a/notebooks_hospitalization_rate/indicators_poverty.ipynb
+++ b/notebooks_hospitalization_rate/indicators_poverty.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How do the features perform with indicators of poverty other than '% Enrolled in Free or Reduced Lunch'?"
+    "# How do the original feature set perform with indicators of poverty other than '% Enrolled in Free or Reduced Lunch'?"
    ]
   },
   {
