--- a/notebooks_unemployment/feature_set_comparison.ipynb
+++ b/notebooks_unemployment/feature_set_comparison.ipynb
@@ -9,28 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/shainedl/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/Users/shainedl/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/Users/shainedl/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/Users/shainedl/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/Users/shainedl/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/Users/shainedl/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -54,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +268,7 @@
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,6 +1060,171 @@
    "source": [
     "shap.summary_plot(shap_values, x_o, feature_names=X_train_o.columns)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLP: Original Features + '% Insufficient Sleep'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_o2 = X_train.filter(['% Below Poverty', 'Median Household Income', \n",
+    "                            '% No College Degree', 'Unemployment Rate', '% Not in Labor Force',\n",
+    "                            '% Jobs in Leisure and Hospitality', '% Part-time',\n",
+    "                            '% Self-Employed', '% Insufficient Sleep'])\n",
+    "\n",
+    "X_val_o2 = X_val.filter(['% Below Poverty', 'Median Household Income', \n",
+    "                            '% No College Degree', 'Unemployment Rate', '% Not in Labor Force',\n",
+    "                            '% Jobs in Leisure and Hospitality', '% Part-time',\n",
+    "                            '% Self-Employed', '% Insufficient Sleep'])\n",
+    "\n",
+    "X_test_o2 = X_test.filter(['% Below Poverty', 'Median Household Income', \n",
+    "                            '% No College Degree', 'Unemployment Rate', '% Not in Labor Force',\n",
+    "                            '% Jobs in Leisure and Hospitality', '% Part-time',\n",
+    "                            '% Self-Employed', '% Insufficient Sleep'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_o2 = X_train_o2.fillna(0)\n",
+    "X_val_o2 = X_val_o2.fillna(0)\n",
+    "X_test_o2 = X_test_o2.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_o2 = PrepareData(X_train_o2, y_train)\n",
+    "val_data_o2 = PrepareData(X_val_o2, y_val)\n",
+    "test_data_o2 = PrepareData(X_test_o2, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader_o2 = DataLoader(train_data_o2, \n",
+    "                          batch_size)\n",
+    "\n",
+    "valid_loader_o2 = DataLoader(val_data_o2, \n",
+    "                          batch_size)\n",
+    "\n",
+    "test_loader_o2 = DataLoader(test_data_o2, \n",
+    "                         batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp = MLP(input_dim=9)\n",
+    "optimizer = optim.Adam(mlp.parameters())\n",
+    "criterion = nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1 \tTraining Loss: 181.954872 \tValidation Loss: 36.692006\n",
+      "Epoch: 2 \tTraining Loss: 58.229560 \tValidation Loss: 36.522949\n",
+      "Epoch: 3 \tTraining Loss: 46.936426 \tValidation Loss: 36.398330\n",
+      "Epoch: 4 \tTraining Loss: 46.037400 \tValidation Loss: 36.291306\n",
+      "Epoch: 5 \tTraining Loss: 43.743441 \tValidation Loss: 36.184344\n",
+      "Epoch: 6 \tTraining Loss: 41.971516 \tValidation Loss: 36.077580\n",
+      "Epoch: 7 \tTraining Loss: 41.125442 \tValidation Loss: 35.971694\n",
+      "Epoch: 8 \tTraining Loss: 40.573384 \tValidation Loss: 35.866417\n",
+      "Epoch: 9 \tTraining Loss: 40.219684 \tValidation Loss: 35.761970\n",
+      "Epoch: 10 \tTraining Loss: 40.118766 \tValidation Loss: 35.658077\n",
+      "Epoch: 11 \tTraining Loss: 40.018346 \tValidation Loss: 35.554643\n",
+      "Epoch: 12 \tTraining Loss: 39.918341 \tValidation Loss: 35.451594\n",
+      "Epoch: 13 \tTraining Loss: 39.818693 \tValidation Loss: 35.348876\n",
+      "Epoch: 14 \tTraining Loss: 39.719354 \tValidation Loss: 35.246447\n",
+      "Epoch: 15 \tTraining Loss: 39.620289 \tValidation Loss: 35.144277\n",
+      "Epoch: 16 \tTraining Loss: 39.521471 \tValidation Loss: 35.042341\n",
+      "Epoch: 17 \tTraining Loss: 39.422879 \tValidation Loss: 34.940616\n",
+      "Epoch: 18 \tTraining Loss: 39.324492 \tValidation Loss: 34.839086\n",
+      "Epoch: 19 \tTraining Loss: 39.226296 \tValidation Loss: 34.737737\n",
+      "Epoch: 20 \tTraining Loss: 39.128279 \tValidation Loss: 34.636558\n",
+      "Epoch: 21 \tTraining Loss: 39.030431 \tValidation Loss: 34.535538\n",
+      "Epoch: 22 \tTraining Loss: 38.932743 \tValidation Loss: 34.434670\n",
+      "Epoch: 23 \tTraining Loss: 38.835208 \tValidation Loss: 34.333947\n",
+      "Epoch: 24 \tTraining Loss: 38.737820 \tValidation Loss: 34.233365\n",
+      "Epoch: 25 \tTraining Loss: 38.640576 \tValidation Loss: 34.132918\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Training\n",
+    "Early Stopping based on best validation loss\n",
+    "\"\"\"\n",
+    "best_val_loss = np.inf \n",
+    "\n",
+    "avg_train_losses = []\n",
+    "avg_valid_losses = [] \n",
+    "\n",
+    "for epoch in range(25):\n",
+    "    train_losses = []\n",
+    "    valid_losses = []\n",
+    "    \n",
+    "    mlp.train()\n",
+    "    for data, outcome in train_loader_o2:\n",
+    "        optimizer.zero_grad()\n",
+    "        output = mlp(data)\n",
+    "        loss = torch.sqrt(criterion(output, outcome))\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_losses.append(loss.item())\n",
+    "    \n",
+    "    mlp.eval()\n",
+    "    for data, outcome in valid_loader_o2:\n",
+    "        output = mlp(data)\n",
+    "        loss = torch.sqrt(criterion(output, outcome))\n",
+    "        valid_losses.append(loss.item())\n",
+    "    \n",
+    "    avg_train_losses.append(np.average(train_losses))\n",
+    "    avg_valid_losses.append(np.average(valid_losses))\n",
+    "    \n",
+    "    print('Epoch: {} \\tTraining Loss: {:.6f} \\tValidation Loss: {:.6f}'.format(\n",
+    "    epoch+1, \n",
+    "    avg_train_losses[-1],\n",
+    "    avg_valid_losses[-1]\n",
+    "    ))\n",
+    "    \n",
+    "    if avg_valid_losses[-1] < best_val_loss:\n",
+    "        best_val_loss = avg_valid_losses[-1]\n",
+    "        torch.save(mlp.state_dict(), 'mlp_org2.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
