--- a/notebooks_hospitals/feature_set_comparison.ipynb
+++ b/notebooks_hospitals/feature_set_comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,6 +1169,241 @@
    ],
    "source": [
     "shap.summary_plot(shap_values, x_o, feature_names=X_train_o.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLP: Original Features + '% Enrolled in Free or Reduced Lunch'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_o2 = X_train.filter(['% Rural', '% households wo car', 'Deaths',\n",
+    "                            '% workers commuting by public transit', \n",
+    "                            'Primary Care Physicians Rate', '% Without Health Insurance',\n",
+    "                            '% Nonwhite', '% Limited English Proficiency', \n",
+    "                            '% Veterans in Civilian Adult Population', '% Adults 65 and Older',\n",
+    "                            '% disabled', 'opioid death rate', '% Fair or Poor Health'])\n",
+    "\n",
+    "X_val_o2 = X_val.filter(['% Rural', '% households wo car', 'Deaths',\n",
+    "                            '% workers commuting by public transit', \n",
+    "                            'Primary Care Physicians Rate', '% Without Health Insurance',\n",
+    "                            '% Nonwhite', '% Limited English Proficiency', \n",
+    "                            '% Veterans in Civilian Adult Population', '% Adults 65 and Older',\n",
+    "                            '% disabled', 'opioid death rate', '% Fair or Poor Health'])\n",
+    "\n",
+    "X_test_o2 = X_test.filter(['% Rural', '% households wo car', 'Deaths',\n",
+    "                            '% workers commuting by public transit', \n",
+    "                            'Primary Care Physicians Rate', '% Without Health Insurance',\n",
+    "                            '% Nonwhite', '% Limited English Proficiency', \n",
+    "                            '% Veterans in Civilian Adult Population', '% Adults 65 and Older',\n",
+    "                            '% disabled', 'opioid death rate', '% Fair or Poor Health'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_o2 = PrepareData(X_train_o2, y_train)\n",
+    "val_data_o2 = PrepareData(X_val_o2, y_val)\n",
+    "test_data_o2 = PrepareData(X_test_o2, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader_o2 = DataLoader(train_data_o2, \n",
+    "                          batch_size)\n",
+    "\n",
+    "valid_loader_o2 = DataLoader(val_data_o2, \n",
+    "                          batch_size)\n",
+    "\n",
+    "test_loader_o2 = DataLoader(test_data_o2, \n",
+    "                         batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp = MLP(input_dim=13)\n",
+    "optimizer = optim.Adam(mlp.parameters())\n",
+    "criterion = nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1 \tTraining Loss: 8.143244 \tValidation Loss: 5.428765\n",
+      "Epoch: 2 \tTraining Loss: 6.826802 \tValidation Loss: 5.275496\n",
+      "Epoch: 3 \tTraining Loss: 6.768599 \tValidation Loss: 5.021094\n",
+      "Epoch: 4 \tTraining Loss: 6.187716 \tValidation Loss: 3.992663\n",
+      "Epoch: 5 \tTraining Loss: 5.633106 \tValidation Loss: 3.816013\n",
+      "Epoch: 6 \tTraining Loss: 5.509041 \tValidation Loss: 3.628386\n",
+      "Epoch: 7 \tTraining Loss: 5.661424 \tValidation Loss: 3.610796\n",
+      "Epoch: 8 \tTraining Loss: 5.339492 \tValidation Loss: 3.561866\n",
+      "Epoch: 9 \tTraining Loss: 5.638630 \tValidation Loss: 3.498909\n",
+      "Epoch: 10 \tTraining Loss: 5.303246 \tValidation Loss: 3.470097\n",
+      "Epoch: 11 \tTraining Loss: 5.501325 \tValidation Loss: 3.495368\n",
+      "Epoch: 12 \tTraining Loss: 5.373734 \tValidation Loss: 3.491247\n",
+      "Epoch: 13 \tTraining Loss: 5.234311 \tValidation Loss: 3.416253\n",
+      "Epoch: 14 \tTraining Loss: 5.281138 \tValidation Loss: 3.439078\n",
+      "Epoch: 15 \tTraining Loss: 5.229260 \tValidation Loss: 3.396565\n",
+      "Epoch: 16 \tTraining Loss: 5.248029 \tValidation Loss: 3.453102\n",
+      "Epoch: 17 \tTraining Loss: 5.284048 \tValidation Loss: 3.431413\n",
+      "Epoch: 18 \tTraining Loss: 5.203678 \tValidation Loss: 3.419029\n",
+      "Epoch: 19 \tTraining Loss: 5.236613 \tValidation Loss: 3.395392\n",
+      "Epoch: 20 \tTraining Loss: 5.173592 \tValidation Loss: 3.358417\n",
+      "Epoch: 21 \tTraining Loss: 5.189120 \tValidation Loss: 3.331422\n",
+      "Epoch: 22 \tTraining Loss: 5.345318 \tValidation Loss: 3.419564\n",
+      "Epoch: 23 \tTraining Loss: 5.047110 \tValidation Loss: 3.337284\n",
+      "Epoch: 24 \tTraining Loss: 5.049760 \tValidation Loss: 3.281320\n",
+      "Epoch: 25 \tTraining Loss: 5.215956 \tValidation Loss: 3.313940\n",
+      "Epoch: 26 \tTraining Loss: 5.143969 \tValidation Loss: 3.308019\n",
+      "Epoch: 27 \tTraining Loss: 5.099314 \tValidation Loss: 3.286837\n",
+      "Epoch: 28 \tTraining Loss: 5.067399 \tValidation Loss: 3.297381\n",
+      "Epoch: 29 \tTraining Loss: 5.158308 \tValidation Loss: 3.270743\n",
+      "Epoch: 30 \tTraining Loss: 5.179154 \tValidation Loss: 3.305702\n",
+      "Epoch: 31 \tTraining Loss: 4.969071 \tValidation Loss: 3.230480\n",
+      "Epoch: 32 \tTraining Loss: 5.077653 \tValidation Loss: 3.246424\n",
+      "Epoch: 33 \tTraining Loss: 5.018755 \tValidation Loss: 3.243928\n",
+      "Epoch: 34 \tTraining Loss: 5.109179 \tValidation Loss: 3.234518\n",
+      "Epoch: 35 \tTraining Loss: 4.756648 \tValidation Loss: 3.210736\n",
+      "Epoch: 36 \tTraining Loss: 5.102447 \tValidation Loss: 3.220400\n",
+      "Epoch: 37 \tTraining Loss: 5.022326 \tValidation Loss: 3.201554\n",
+      "Epoch: 38 \tTraining Loss: 5.047946 \tValidation Loss: 3.214258\n",
+      "Epoch: 39 \tTraining Loss: 5.161298 \tValidation Loss: 3.208081\n",
+      "Epoch: 40 \tTraining Loss: 4.965616 \tValidation Loss: 3.162309\n",
+      "Epoch: 41 \tTraining Loss: 4.898792 \tValidation Loss: 3.202570\n",
+      "Epoch: 42 \tTraining Loss: 5.069543 \tValidation Loss: 3.166491\n",
+      "Epoch: 43 \tTraining Loss: 4.849709 \tValidation Loss: 3.140212\n",
+      "Epoch: 44 \tTraining Loss: 5.013121 \tValidation Loss: 3.142571\n",
+      "Epoch: 45 \tTraining Loss: 4.944311 \tValidation Loss: 3.165861\n",
+      "Epoch: 46 \tTraining Loss: 5.081789 \tValidation Loss: 3.156743\n",
+      "Epoch: 47 \tTraining Loss: 4.994396 \tValidation Loss: 3.155804\n",
+      "Epoch: 48 \tTraining Loss: 5.040695 \tValidation Loss: 3.154508\n",
+      "Epoch: 49 \tTraining Loss: 5.002040 \tValidation Loss: 3.153867\n",
+      "Epoch: 50 \tTraining Loss: 4.983946 \tValidation Loss: 3.129618\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Training\n",
+    "Early Stopping based on best validation loss\n",
+    "\"\"\"\n",
+    "best_val_loss = np.inf \n",
+    "\n",
+    "avg_train_losses = []\n",
+    "avg_valid_losses = [] \n",
+    "\n",
+    "for epoch in range(50):\n",
+    "    train_losses = []\n",
+    "    valid_losses = []\n",
+    "    \n",
+    "    mlp.train()\n",
+    "    for data, outcome in train_loader_o2:\n",
+    "        optimizer.zero_grad()\n",
+    "        output = mlp(data)\n",
+    "        loss = torch.sqrt(criterion(output, outcome))\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_losses.append(loss.item())\n",
+    "    \n",
+    "    mlp.eval()\n",
+    "    for data, outcome in valid_loader_o2:\n",
+    "        output = mlp(data)\n",
+    "        loss = torch.sqrt(criterion(output, outcome))\n",
+    "        valid_losses.append(loss.item())\n",
+    "    \n",
+    "    avg_train_losses.append(np.average(train_losses))\n",
+    "    avg_valid_losses.append(np.average(valid_losses))\n",
+    "    \n",
+    "    print('Epoch: {} \\tTraining Loss: {:.6f} \\tValidation Loss: {:.6f}'.format(\n",
+    "    epoch+1, \n",
+    "    avg_train_losses[-1],\n",
+    "    avg_valid_losses[-1]\n",
+    "    ))\n",
+    "    \n",
+    "    if avg_valid_losses[-1] < best_val_loss:\n",
+    "        best_val_loss = avg_valid_losses[-1]\n",
+    "        torch.save(mlp.state_dict(), 'mlp_org2.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.31632702515043"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_val_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp.load_state_dict(torch.load('mlp_org2.model'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 5.418202\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test loss\n",
+    "test_loss = 0.0\n",
+    "\n",
+    "mlp.eval()\n",
+    "for data, outcome in test_loader_o2:\n",
+    "    output = mlp(data)\n",
+    "    loss = torch.sqrt(criterion(output, outcome))\n",
+    "    test_loss += loss.item()*data.size(0)\n",
+    "\n",
+    "test_loss = test_loss/len(test_data_o2)\n",
+    "print('Test Loss: {:.6f}\\n'.format(test_loss))"
    ]
   },
   {
