--- a/notebooks_business_closures/feature_set_comparison.ipynb
+++ b/notebooks_business_closures/feature_set_comparison.ipynb
@@ -1051,6 +1051,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLP: Original Features + 'Primary Care Physicians Rate'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 156,
    "metadata": {},
@@ -1245,6 +1252,13 @@
     "\n",
     "test_loss = test_loss/len(test_data_o2)\n",
     "print('Test Loss: {:.6f}\\n'.format(test_loss))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explain output through SHAP"
    ]
   },
   {
