--- a/notebooks_hospitals/feature_set_comparison.ipynb
+++ b/notebooks_hospitals/feature_set_comparison.ipynb
@@ -1177,7 +1177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MLP: Original Features + '% Enrolled in Free or Reduced Lunch'"
+    "## MLP: Original Features + 'Deaths'"
    ]
   },
   {
